# SmartSim-workshops

./: README.md
20230215/: README.md  smartsim_101.ipynb  smartsim_101.py
20230215/solutions/: smartsim_101.ipynb  smartsim_101.py
20230215/solutions/src/c/: CMakeLists.txt  fd2d_heat_steady_test.c
20230215/solutions/src/cpp/: fd2d_heat_steady.hpp  fd2d_heat_steady_test.cpp
20230215/solutions/src/fortran/: fd2d_heat_steady_test.F90  make_app_swan.sh
20230215/src/cpp/: CMakeLists.txt  fd2d_heat_steady_test.cpp  make_app_swan.sh
HPC_days_2025/: .gitignore  README.md  smartsim_101.ipynb  smartsim_101.py
HPC_days_2025/solutions/: smartsim_101.ipynb  smartsim_101.py
HPC_days_2025/solutions/src/c/: fd2d_heat_steady_test.c
HPC_days_2025/src/c/: fd2d_heat_steady.h  fd2d_heat_steady_test.c
HPC_days_2025/src/fortran/: fd2d_heat_steady_test.F90
LRZ_2026/: README.md  smartsim_101.ipynb
LRZ_2026/exercise_01/: README.md  smartsim_101.py
LRZ_2026/exercise_01/solutions/: smartsim_101.ipynb
LRZ_2026/exercise_01/solutions/src/c/: fd2d_heat_steady.c
LRZ_2026/exercise_01/solutions/src/cpp/: fd2d_heat_steady_test.cpp
LRZ_2026/exercise_01/solutions/src/fortran/: CMakeLists.txt  make_app.sh
LRZ_2026/exercise_01/solutions/src/python/: fd2d_heat_steady.py
LRZ_2026/exercise_01/src/c/: make_app.sh
LRZ_2026/exercise_01/src/cpp/: fd2d_heat_steady.cpp
LRZ_2026/exercise_01/src/fortran/: fd2d_heat_steady.F90  make_app.sh
LRZ_2026/exercise_02/: README.rst  driver.py
LRZ_2026/solutions/: smartsim_101.py
LRZ_2026/solutions/src/cpp/: make_app.sh
LRZ_2026/src/cpp/: make_app.sh
LUMI_2026/: .gitignore
LUMI_2026/exercise_01/: README.md  smartsim_101.ipynb  smartsim_101.py
LUMI_2026/exercise_01/solutions/: smartsim_101.ipynb  smartsim_101.py
LUMI_2026/exercise_01/solutions/src/c/: make_app.sh
LUMI_2026/exercise_01/solutions/src/fortran/: str2int.f90
LUMI_2026/exercise_01/src/python/: fd2d_heat_steady.py
LUMI_2026/exercise_02/: README.rst  driver.py
